[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/UI/button/mini_close_press.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/button/mini_close.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/window/window_ingame.png" type="Texture" id=3]
[ext_resource path="res://scene/Window/crafting_window.gd" type="Script" id=4]
[ext_resource path="res://assets/btn_font.res" type="DynamicFont" id=5]
[ext_resource path="res://scene/UI/shop_item.res" type="PackedScene" id=6]
[ext_resource path="res://assets/UI/button/blue_mini.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/button/blue_mini_press.png" type="Texture" id=8]
[ext_resource path="res://assets/btn_mini_font.res" type="DynamicFont" id=9]

[node name="CraftingMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.325379
margin_right = -0.325378
color = Color( 0, 0, 0, 0.313726 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="window" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -313.5
margin_top = -174.5
margin_right = 313.5
margin_bottom = 174.5
texture = ExtResource( 3 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_close" type="TextureButton" parent="window"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -39.0
margin_bottom = 39.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="window"]
anchor_left = 0.032
anchor_top = 0.117
anchor_right = 0.968
anchor_bottom = 0.963
margin_left = -0.0640011
margin_top = 12.167
margin_right = 0.0639648
margin_bottom = -0.0870056
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemA" parent="window/Control" instance=ExtResource( 6 )]

[node name="ItemB" parent="window/Control" instance=ExtResource( 6 )]
margin_left = 118.0
margin_right = 182.0

[node name="ItemC" parent="window/Control" instance=ExtResource( 6 )]
margin_left = 238.0
margin_right = 302.0

[node name="ItemResult" parent="window/Control" instance=ExtResource( 6 )]
margin_left = 392.0
margin_right = 456.0

[node name="Label" type="Label" parent="window/Control"]
margin_left = 336.359
margin_top = 23.5451
margin_right = 376.359
margin_bottom = 52.5451
custom_fonts/font = ExtResource( 5 )
text = "="

[node name="Klaim" type="TextureButton" parent="window/Control"]
margin_left = 488.0
margin_top = 15.0
margin_right = 574.0
margin_bottom = 60.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="window/Control/Klaim"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 9 )
text = "Klaim"
align = 1
valign = 1
[connection signal="pressed" from="window/btn_close" to="." method="_on_close_crafting"]
[connection signal="pressed" from="window/Control/Klaim" to="." method="_on_Klaim"]
